--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avro-schema-registry",
+  "name": "@sondremare/avro-schema-registry",
   "version": "2.0.1",
   "description": "Confluent Schema Registry implementation in javascript to easily serialize and deserialize kafka messages",
   "main": "registry.js",
@@ -11,14 +11,14 @@
     "schema",
     "schema-registry"
   ],
-  "author": "Bence Balogh",
+  "author": "Bence Balogh, Sondre Mære Overskaug",
   "license": "MIT",
   "peerDependencies": {
     "avsc": "^5.2.1"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/bencebalogh/avro-schema-registry.git"
+    "url": "git://github.com/sondremare/avro-schema-registry.git"
   },
   "devDependencies": {
     "chai": "^4.1.2",
